# recipe-log

./: .env.example  README.md  dev.sh  docker-compose.prod.yml  docker-compose.yml
.claude/: settings.json
.github/workflows/: docker.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1411f7138911_add_household_invites.py  15488f45898b_shopping_items_recipe_id_on_delete_set_.py  878971226811_add_category_to_tags.py  a1e52cc68033_float_quantities.py  ab422bea9156_initial_schema.py  c2f59cca1f60_add_category_to_shopping_items.py  ea578ad14474_add_created_by_to_recipes.py
backend/app/: main.py
backend/app/api/: auth.py  households.py  import_.py  recipes.py  shopping.py  tags.py  users.py
backend/app/core/: config.py  database.py  deps.py  security.py
backend/app/models/: __init__.py  household.py  recipe.py  shopping.py  user.py
backend/app/schemas/: auth.py  recipe.py  shopping.py  tag.py
backend/app/services/ocr/: ai.py  base.py  factory.py  local.py
backend/app/services/parser/: ai.py  base.py  factory.py  local.py
backend/app/utils/: categorize.py  units.py
backend/tests/: conftest.py  test_auth_api.py  test_parser.py  test_recipes_api.py  test_security.py  test_shopping_api.py  test_tags_api.py  test_units.py
docs/plans/: 2026-02-17-recipe-log-design.md  2026-02-17-recipe-log-implementation.md  (+2 more)
e2e/: playwright.config.ts
e2e/tests/: app.spec.ts  (+1 more)
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
nginx/: nginx.conf
(+23 files in other folders)
